tests/dataset/tpc-ds/compiler/c/q35.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *ca_state;
  const char *cd_gender;
  const char *cd_marital_status;
  int cd_dep_count;
  int cd_dep_employed_count;
  int cd_dep_college_count;
  int cnt;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  int c_current_addr_sk;
  int c_current_cdemo_sk;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  const char *ca_state;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cd_demo_sk;
  const char *cd_gender;
  const char *cd_marital_status;
  int cd_dep_count;
  int cd_dep_employed_count;
  int cd_dep_college_count;
} customer_demographic_t;
typedef struct {
  int len;
  customer_demographic_t *data;
} customer_demographic_list_t;
customer_demographic_list_t create_customer_demographic_list(int len) {
  customer_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_customer_sk;
  int ss_sold_date_sk;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
  int d_qoy;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_state;
  int cd_gender;
  int cd_marital_status;
  int cd_dep_count;
  int cd_dep_employed_count;
  int cd_dep_college_count;
  int cnt;
} groups_item_t;
typedef struct {
  int len;
  groups_item_t *data;
} groups_item_list_t;
groups_item_list_t create_groups_item_list(int len) {
  groups_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(groups_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q35_simplified_groups;
static void test_TPCDS_Q35_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.ca_state = "CA",
                            .cd_gender = "M",
                            .cd_marital_status = "S",
                            .cd_dep_count = 1,
                            .cd_dep_employed_count = 1,
                            .cd_dep_college_count = 0,
                            .cnt = 1}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q35_simplified_groups.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q35_simplified_groups.len; i3++) {
      if (test_TPCDS_Q35_simplified_groups.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  customer_t customer[] = {
      (customer_t){
          .c_customer_sk = 1, .c_current_addr_sk = 1, .c_current_cdemo_sk = 1},
      (customer_t){
          .c_customer_sk = 2, .c_current_addr_sk = 2, .c_current_cdemo_sk = 2}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){.ca_address_sk = 1, .ca_state = "CA"},
      (customer_addres_t){.ca_address_sk = 2, .ca_state = "NY"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  customer_demographic_t customer_demographics[] = {
      (customer_demographic_t){.cd_demo_sk = 1,
                               .cd_gender = "M",
                               .cd_marital_status = "S",
                               .cd_dep_count = 1,
                               .cd_dep_employed_count = 1,
                               .cd_dep_college_count = 0},
      (customer_demographic_t){.cd_demo_sk = 2,
                               .cd_gender = "F",
                               .cd_marital_status = "M",
                               .cd_dep_count = 2,
                               .cd_dep_employed_count = 1,
                               .cd_dep_college_count = 1}};
  int customer_demographics_len =
      sizeof(customer_demographics) / sizeof(customer_demographics[0]);
  store_sale_t store_sales[] = {
      (store_sale_t){.ss_customer_sk = 1, .ss_sold_date_sk = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2000, .d_qoy = 1}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  list_int tmp4 = list_int_create(store_sales.len * date_dim.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    for (int tmp7 = 0; tmp7 < date_dim_len; tmp7++) {
      date_dim_t d = date_dim[tmp7];
      if (!(ss.ss_sold_date_sk == d.d_date_sk)) {
        continue;
      }
      if (!(d.d_year == 2000 && d.d_qoy < 4)) {
        continue;
      }
      tmp4.data[tmp5] = ss.ss_customer_sk;
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  list_int purchased = tmp4;
  groups_item_list_t groups = (groups_item_list_t){0, NULL};
  printf("[");
  for (int i8 = 0; i8 < groups.len; i8++) {
    if (i8 > 0)
      printf(",");
    groups_item_t it = groups.data[i8];
    printf("{");
    _json_string("ca_state");
    printf(":");
    _json_int(it.ca_state);
    printf(",");
    _json_string("cd_gender");
    printf(":");
    _json_int(it.cd_gender);
    printf(",");
    _json_string("cd_marital_status");
    printf(":");
    _json_int(it.cd_marital_status);
    printf(",");
    _json_string("cd_dep_count");
    printf(":");
    _json_int(it.cd_dep_count);
    printf(",");
    _json_string("cd_dep_employed_count");
    printf(":");
    _json_int(it.cd_dep_employed_count);
    printf(",");
    _json_string("cd_dep_college_count");
    printf(":");
    _json_int(it.cd_dep_college_count);
    printf(",");
    _json_string("cnt");
    printf(":");
    _json_int(it.cnt);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q35_simplified_groups = groups;
  test_TPCDS_Q35_simplified();
  return 0;
}
